# fast-api-app

./: .env.postgres.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: uv-fastapi-package-guide.md
migrations/: env.py
migrations/versions/: 0001_create_projects_table.py
scripts/: postgres-shell.sh  postgres-start.sh  postgres-stop.sh
src/fast_api_app/: main.py  models.py  settings.py
tests/: test_main.py  test_migrations.py  test_models.py  test_postgres_scripts.py  test_settings.py
