[project]
name = "fast-api-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bilal", email = "bhaidar@gmail.com" }
]
requires-python = "==3.14.*"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.38",
]

[tool.fastapi]
entrypoint = "fast_api_app.main:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
